// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`serialize > nodes > table > header in body 1`] = `
<table style="min-width: 25px;">
  <colgroup>
    <col style="min-width: 25px;">
  </colgroup>
  <tbody>
    <tr>
      <th colspan="1"
          rowspan="1"
      >
        <p>
          example1
        </p>
      </th>
    </tr>
    <tr>
      <th colspan="1"
          rowspan="1"
      >
        <p>
          example3
        </p>
      </th>
    </tr>
  </tbody>
</table>
`;

exports[`serialize > nodes > table > multiline cell 1`] = `
<table style="min-width: 25px;">
  <colgroup>
    <col style="min-width: 25px;">
  </colgroup>
  <tbody>
    <tr>
      <th colspan="1"
          rowspan="1"
      >
        <p>
          example1
        </p>
        <p>
          example2
        </p>
      </th>
    </tr>
  </tbody>
</table>
`;

exports[`serialize > nodes > table > no header 1`] = `
<table style="min-width: 25px;">
  <colgroup>
    <col style="min-width: 25px;">
  </colgroup>
  <tbody>
    <tr>
      <td colspan="1"
          rowspan="1"
      >
        <p>
          example1
        </p>
      </td>
    </tr>
    <tr>
      <td colspan="1"
          rowspan="1"
      >
        <p>
          example3
        </p>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`serialize > nodes > table > with colspan 1`] = `
<table style="min-width: 50px;">
  <colgroup>
    <col style="min-width: 25px;">
    <col style="min-width: 25px;">
  </colgroup>
  <tbody>
    <tr>
      <th colspan="2"
          rowspan="1"
      >
        <p>
          example1
        </p>
      </th>
    </tr>
  </tbody>
</table>
`;

exports[`serialize > nodes > table > with rowspan 1`] = `
<table style="min-width: 25px;">
  <colgroup>
    <col style="min-width: 25px;">
  </colgroup>
  <tbody>
    <tr>
      <th colspan="1"
          rowspan="2"
      >
        <p>
          example1
        </p>
      </th>
    </tr>
  </tbody>
</table>
`;
